.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
17:48:06 **** Rebuild of configuration Debug for project c_demo ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\c_demo.o" "..\\src\\c_demo.c" 
gcc -o c_demo.exe "src\\c_demo.o" 
Info: Nothing to build for c_demo
14:53:46 **** Incremental Build of configuration Debug for project c_demo ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\c_demo.o" "..\\src\\c_demo.c" 
gcc -o c_demo.exe "src\\c_demo.o" 
Info: Nothing to build for c_demo
14:54:08 **** Incremental Build of configuration Debug for project c_demo ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\c_demo.o" "..\\src\\c_demo.c" 
gcc -o c_demo.exe "src\\c_demo.o" 
14:54:16 **** Incremental Build of configuration Debug for project c_demo ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\c_demo.o" "..\\src\\c_demo.c" 
gcc -o c_demo.exe "src\\c_demo.o" 
15:47:59 **** Incremental Build of configuration Debug for project c_demo ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\c_demo.o" "..\\src\\c_demo.c" 
..\src\c_demo.c: In function 'main':
..\src\c_demo.c:16:21: error: expected ')' before 'o'
  printf("ch=%d %c\n"o, ch, ch);
                     ^
..\src\c_demo.c:16:14: warning: format '%d' expects a matching 'int' argument [-Wformat=]
  printf("ch=%d %c\n"o, ch, ch);
              ^
..\src\c_demo.c:16:17: warning: format '%c' expects a matching 'int' argument [-Wformat=]
  printf("ch=%d %c\n"o, ch, ch);
                 ^
..\src\c_demo.c:14:7: warning: variable 'ch' set but not used [-Wunused-but-set-variable]
  char ch;
       ^~
15:48:48 **** Incremental Build of configuration Debug for project c_demo ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\c_demo.o" "..\\src\\c_demo.c" 
gcc -o c_demo.exe "src\\c_demo.o" 
15:52:54 **** Incremental Build of configuration Debug for project c_demo ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\c_demo.o" "..\\src\\c_demo.c" 
gcc -o c_demo.exe "src\\c_demo.o" 
16:44:01 **** Incremental Build of configuration Debug for project c_demo ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\c_demo.o" "..\\src\\c_demo.c" 
gcc -o c_demo.exe "src\\c_demo.o" 
10:37:27 **** Incremental Build of configuration Debug for project c_demo ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\c_demo.o" "..\\src\\c_demo.c" 
..\src\c_demo.c: In function 'main':
..\src\c_demo.c:17:6: warning: unused variable 'a' [-Wunused-variable]
  int a, i = 1;
      ^
gcc -o c_demo.exe "src\\c_demo.o" 
10:38:25 **** Incremental Build of configuration Debug for project c_demo ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\c_demo.o" "..\\src\\c_demo.c" 
..\src\c_demo.c: In function 'main':
..\src\c_demo.c:17:6: warning: unused variable 'a' [-Wunused-variable]
  int a, i = 1;
      ^
gcc -o c_demo.exe "src\\c_demo.o" 
Info: Nothing to build for c_demo
Info: Nothing to build for c_demo
10:03:27 **** Incremental Build of configuration Debug for project c_demo ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\c_demo.o" "..\\src\\c_demo.c" 
..\src\c_demo.c: In function 'main':
..\src\c_demo.c:14:6: warning: unused variable 'a' [-Wunused-variable]
  int a, i = 1;
      ^
gcc -o c_demo.exe "src\\c_demo.o" 
10:05:47 **** Incremental Build of configuration Debug for project c_demo ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\demo.o" "..\\src\\demo.c" 
gcc -o c_demo.exe "src\\c_demo.o" "src\\demo.o" 
src\demo.o: In function `main':
F:\ProjectDemo\cDemo\c_demo\Debug/../src/demo.c:6: multiple definition of `main'
src\c_demo.o:F:\ProjectDemo\cDemo\c_demo\Debug/../src/c_demo.c:13: first defined here
collect2.exe: error: ld returned 1 exit status
10:06:59 **** Incremental Build of configuration Debug for project c_demo ****
Info: Internal Builder is used for build
gcc -o c_demo.exe "src\\c_demo.o" "src\\demo.o" 
src\demo.o: In function `main':
F:\ProjectDemo\cDemo\c_demo\Debug/../src/demo.c:6: multiple definition of `main'
src\c_demo.o:F:\ProjectDemo\cDemo\c_demo\Debug/../src/c_demo.c:13: first defined here
collect2.exe: error: ld returned 1 exit status
10:07:07 **** Incremental Build of configuration Debug for project c_demo ****
Info: Internal Builder is used for build
gcc -o c_demo.exe "src\\c_demo.o" "src\\demo.o" 
src\demo.o: In function `main':
F:\ProjectDemo\cDemo\c_demo\Debug/../src/demo.c:6: multiple definition of `main'
src\c_demo.o:F:\ProjectDemo\cDemo\c_demo\Debug/../src/c_demo.c:13: first defined here
collect2.exe: error: ld returned 1 exit status
10:08:39 **** Incremental Build of configuration Debug for project c_demo ****
Info: Internal Builder is used for build
gcc -o c_demo.exe "src\\demo.o" 
Info: Nothing to build for c_demo
Info: Nothing to build for c_demo
Info: Nothing to build for c_demo
Info: Nothing to build for c_demo
Info: Nothing to build for c_demo
Info: Nothing to build for c_demo
10:11:39 **** Clean-only build of configuration Debug for project c_demo ****
rm -rf src/demo.d src/demo.o c_demo.exe 
Cannot run program "rm": Launching failed

Error: Program "rm" not found in PATH
PATH=[D:\miniGW\bin;\bin;\usr\bin;D:/Java/jdk1.8.0_221/bin/../jre/bin/server;D:/Java/jdk1.8.0_221/bin/../jre/bin;D:/Java/jdk1.8.0_221/bin/../jre/lib/amd64;C:\Program Files (x86)\Common Files\Oracle\Java\javapath;D:\anaconda;D:\anaconda\Library\mingw-w64\bin;D:\anaconda\Library\usr\bin;D:\anaconda\Library\bin;D:\anaconda\Scripts;C:\Windows\system32;C:\Windows;C:\Windows\System32\Wbem;C:\Windows\System32\WindowsPowerShell\v1.0\;C:\Program Files\Condusiv Technologies\ExpressCache\;D:\nvm;D:\nodejs;D:\Git\cmd;D:\yarn\bin\;D:\svn\bin;D:\AndroidSdkHome\flutter\bin;D:\Android\Sdk\tools\bin;D:\miniGW\bin;D:\java\jdk1.8.0_221\bin;D:\java\jdk1.8.0_221\jre\bin;D:\maven3\bin;D:\phpstudy_pro\Extensions\MySQL5.7.26\bin;D:\nodejs\node_modules\node_global;D:\python3\Scripts\;D:\python3\;D:\Microsoft VS Code\bin;D:\nvm;D:\nodejs;D:\Fiddler;C:\Users\Administrator\AppData\Local\Yarn\bin;C:\Users\Administrator\AppData\Local\BypassRuntm;D:\PyCharm Community Edition 2019.2.1\bin;;D:\Eclipse-C\cpp-latest-released\eclipse]

10:11:39 **** Clean-only build of configuration Debug for project c_demo ****
10:11:51 **** Rebuild of configuration Debug for project c_demo ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\demo.o" "..\\src\\demo.c" 
gcc -o c_demo.exe "src\\demo.o" 
Info: Nothing to build for c_demo
Info: Nothing to build for c_demo
10:13:44 **** Incremental Build of configuration Debug for project c_demo ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\c_demo.o" "..\\src\\c_demo.c" 
gcc -o c_demo.exe "src\\c_demo.o" 
Info: Nothing to build for c_demo
